# audio_io

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cmake_backend_handler.txt
include/audio_io/: audio_io.hpp  audio_io_private.hpp  audio_out.hpp  speex_resampler_config.h
include/audio_io/private/: audio_io.hpp  audio_outputs.hpp  com.hpp  latency_predictor.hpp  logging.hpp  mixing_matrices.hpp  output_worker_thread.hpp  sample_format_converter.hpp  semaphore.hpp  single_threaded_apartment.hpp
include/audio_out/: audio_out.hpp
logger_singleton/: CMakeLists.txt
logger_singleton/include/logger_singleton/: logger_singleton.hpp
logger_singleton/src/logger_singleton/: logger_singleton.cpp
powercores/: CMakeLists.txt
src/audio_io/: common.cpp  common_output.cpp  factory_creation.cpp  initialization.cpp  logging.cpp  output_worker_thread.cpp  resampler.cpp  speex_resampler.c  winmm.cpp  winmm_output.cpp
src/audio_io/alsa/: alsa.hpp  output_device.cpp  output_factory.cpp
src/audio_io/common/: common_output.cpp  factory_creation.cpp
src/audio_io/format_conversion/: mixing_matrices.cpp  remix.cpp  sample_format_converter.cpp
src/audio_io/helpers/windows/: single_threaded_apartment.cpp
src/audio_io/outputs/: common_output.cpp  factory_creation.cpp  latency_predictor.cpp
src/audio_io/outputs/windows/: winmm_output.cpp
src/audio_io/outputs/windows/wasapi/: device.cpp  factory.cpp  wasapi.hpp
src/audio_io/wasapi/: output_device.cpp  wasapi.hpp
src/audio_out/: common.cpp  openal.cpp  winmm.cpp
src/tests/: enumeration.cpp  output.cpp
